--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^12.20.17",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "audio-react-recorder": "^1.0.4",
+    "axios": "^0.21.1",
+    "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-media-recorder": "^1.5.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
